# multi_agent_console

./: Architecture_Diagram.md  Design_Document.md  Documentation_README.md  Feature_Matrix.md  MultiAgentConsole_Product_Brief.md  Product_Brief.md  README.md  Use_Cases.md  config.json  run_selftests.py  run_tests.py  selftest.py  selftest_framework.py
agents/: registry.json
data/: accessibility_config.json  encryption_key  memory.db  permissions.json
desktop/: main.js  offline.html  package.json  preload.js  settings.html
docs/: README.md  mode_selection.md  selftests.md
multi_agent_console/: README.md  __init__.py  __main__.py  a2a_adapter.py  advanced_tools.py  agent_marketplace.py  app.py  auth.py  cache.py  config.json  cross_platform.py  debugging.py  marketplace.py  mcp_server.py  memory_manager.py  multi_modal.py  offline.py  optimization.py  pyproject.toml  security_enhancements.py  security_manager.py  thought_graph.py  ui_enhancements.py  web_server.py  workflow.py
multi_agent_console/monitoring/: __init__.py  debugger.py  error_tracking.py  logger.py  performance.py
multi_agent_console/plugin/: __init__.py  base.py  registry.py
multi_agent_console/plugins/: __init__.py  a2a_plugin.py  graph_analysis_plugin.py  logger_plugin.py
multi_agent_console/static/js/: graph.js  main.js  marketplace.js  multimodal.js  offline.js  plugins.js  tools.js  websocket-test.js  workflow.js
multi_agent_console/templates/: index.html  login.html  register.html
plugins/: registry.json
tests/: __init__.py  test_a2a_adapter.py  test_agent_marketplace.py  (+13 more)
(+17 files in other folders)
