[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi_agent_console"
version = "0.1.0"
description = "A terminal-based multi-agent system powered by Google's ADK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "textual>=0.40.0",
    "google-adk",
    "google-generativeai>=0.3.0",
]

[project.scripts]
multi-agent-console = "multi_agent_console.app:main"

[tool.hatch.build.targets.wheel]
packages = ["multi_agent_console"]

[tool.ruff]
line-length = 100
target-version = "py310"
